--- a/app/src/app/public/landinghome.html
+++ b/app/src/app/public/landinghome.html
@@ -6,17 +6,11 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="intro-message">
-                    <h1>Cognito QuickStart App</h1>
-                    <h3>Source code can be found <a href="https://github.com/awslabs/aws-cognito-angular2-quickstart">here</a>
-                    </h3>
+                    <h1>Max's professional site</h1>
+                    <h2>Software Engineer</h2>
                     <hr class="intro-divider">
-                    <ul class="list-inline intro-social-buttons">
-                        <li>
-                            <a
-                                    [routerLink]="['/home/login']" class="btn btn-default btn-lg"> <i
-                                    class="fa fa-lock fa-fw"></i> <span class="network-name">Cognito</span> Login</a>
-                        </li>
-                    </ul>
+                    <h4>Source code can be found <a href="https://github.com/maxaldunate/max-aldunate-pro-angular">here</a></h4>
+                    <h4>Linked in profile <a href="https://www.linkedin.com/in/maxaldunate">here</a></h4>                    
                 </div>
             </div>
         </div>
