--- a/app/src/app/secure/landing/secureHome.html
+++ b/app/src/app/secure/landing/secureHome.html
@@ -9,7 +9,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">Cognito Startup</a>
+            <a class="navbar-brand" href="index.html">Max's single app page</a>
         </div>
         <!-- /.navbar-header -->
 
