add register option to home

--- a/app/src/app/public/home.html
+++ b/app/src/app/public/home.html
@@ -21,6 +21,9 @@
                 <li>
                     <a [routerLink]="['/home/login']">Login</a>
                 </li>
+                <li>
+                    <a [routerLink]="['/home/register']">Register</a>
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
